--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -10,30 +10,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_marginBottom="100dp"
     tools:context=".ui.login.SignUpFragment">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="130dp"
-        android:layout_height="126dp"
-        android:layout_marginTop="5dp"
 
-        android:src="@drawable/unnl"
-
-        app:layout_constraintBottom_toTopOf="@+id/signup_fullname"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/signup_fullname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/inputs_background"
         android:hint="@string/fullname"
@@ -46,7 +33,7 @@
         android:textColorLink="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/signup_username"
@@ -129,10 +116,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_marginStart="48dp"
-
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="15dp"
-
+        android:layout_marginTop="50dp"
         android:background="@drawable/buttons_background_white_stroke"
         android:text="@string/sign_up"
         android:textAllCaps="false"
