--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,7 @@
             android:paddingBottom="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="64dp" />
+            tools:listitem="@layout/item_layout_post"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
