--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -2,17 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <item
-        android:id="@+id/signOut"
-        android:title="@string/sign_out_menu_label"
-        app:showAsAction="never"
-        android:orderInCategory="30" />
+        android:id="@+id/starredPost"
+        android:title="Starred"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_star_24dp"
+        android:orderInCategory="1"
+        />
 
     <item
         android:id="@+id/editProfile"
         android:title="@string/edit_profile_menu_label"
         app:showAsAction="never"
-        android:orderInCategory="20" />
+        android:orderInCategory="2"
+        />
+
+    <item
+        android:id="@+id/signOut"
+        android:title="@string/sign_out_menu_label"
+        app:showAsAction="never"
+        android:orderInCategory="3" />
 
 </menu>
 
