4 - Version(layouts) 1 done : BottomNavView bug
Signed-off-by: Xblack97 <xblack97@yahoo.com>

--- a/app/src/main/res/layout/fragment_profile_setting.xml
+++ b/app/src/main/res/layout/fragment_profile_setting.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:background="@color/colorPrimary">
 
 
@@ -139,11 +139,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="85dp"
                     android:id="@+id/space"
-
                     app:layout_constraintTop_toBottomOf="@id/bio_profile_setting"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-
                     />
 
                 <Button
